--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,9 @@ abstract: "(you shouldn't) use Dist::Zilla like DANIELP"
 author:
   - 'Daniel Pittman <daniel@rimspace.net>'
 build_requires:
-  Carp: 0
   File::Find: 0
   File::Temp: 0
-  Scalar::Util: 0
-  Test::More: 0.94
+  Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
@@ -25,7 +23,7 @@ requires:
   Dist::Zilla::Plugin::HasVersionTests: 0
   Dist::Zilla::Plugin::MinimumVersionTests: 0
   Dist::Zilla::Plugin::PortabilityTests: 0
-  Dist::Zilla::Plugin::ReportVersions: 0
+  Dist::Zilla::Plugin::ReportVersions::Tiny: 0
   Dist::Zilla::Plugin::SynopsisTests: 0
   Dist::Zilla::Plugin::UnusedVarsTests: 0
   Dist::Zilla::PluginBundle::Git: 0
@@ -34,7 +32,7 @@ requires:
   namespace::autoclean: 0
   perl: v5.8.1
   utf8: 0
-version: 1.02
+version: 1.03
 x_Dist_Zilla:
   plugins:
     -
@@ -74,9 +72,9 @@ x_Dist_Zilla:
       name: '@DANIELP/PodVersion'
       version: 3.101461
     -
-      class: Dist::Zilla::Plugin::ReportVersions
-      name: '@DANIELP/ReportVersions'
-      version: 1.101460
+      class: Dist::Zilla::Plugin::ReportVersions::Tiny
+      name: '@DANIELP/ReportVersions::Tiny'
+      version: 1.01
     -
       class: Dist::Zilla::Plugin::CompileTests
       name: '@DANIELP/CompileTests'
