--- a/dist.ini
+++ b/dist.ini
@@ -6,12 +6,12 @@ copyright_holder = Daniel Pittman
 [@DANIELP]
 
 [Prereq]
-Dist::Zilla::Plugin::BumpVersionFromGit  = 0
-Dist::Zilla::Plugin::ReportVersions      = 0
-Dist::Zilla::Plugin::CompileTests        = 0
-Dist::Zilla::Plugin::HasVersionTests     = 0
-Dist::Zilla::Plugin::MinimumVersionTests = 0
-Dist::Zilla::Plugin::PortabilityTests    = 0
-Dist::Zilla::Plugin::SynopsisTests       = 0
-Dist::Zilla::Plugin::UnusedVarsTests     = 0
-Dist::Zilla::Plugin::ChangelogFromGit    = 0
+Dist::Zilla::Plugin::BumpVersionFromGit   = 0
+Dist::Zilla::Plugin::ReportVersions::Tiny = 0
+Dist::Zilla::Plugin::CompileTests         = 0
+Dist::Zilla::Plugin::HasVersionTests      = 0
+Dist::Zilla::Plugin::MinimumVersionTests  = 0
+Dist::Zilla::Plugin::PortabilityTests     = 0
+Dist::Zilla::Plugin::SynopsisTests        = 0
+Dist::Zilla::Plugin::UnusedVarsTests      = 0
+Dist::Zilla::Plugin::ChangelogFromGit     = 0
