Import of DANIELP/Dist-Zilla-PluginBundle-DANIELP-1.04 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-DANIELP
gitpan-cpan-version:      1.04
gitpan-cpan-path:         DANIELP/Dist-Zilla-PluginBundle-DANIELP-1.04.tar.gz
gitpan-cpan-author:       DANIELP
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -5,11 +5,11 @@ author:
 build_requires:
   File::Find: 0
   File::Temp: 0
-  Test::More: 0
+  Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 3.101461, CPAN::Meta::Converter version 2.101461'
+generated_by: 'Dist::Zilla version 4.102342, CPAN::Meta::Converter version 2.102400'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,60 +17,60 @@ meta-spec:
 name: Dist-Zilla-PluginBundle-DANIELP
 requires:
   Dist::Zilla: 2.101040
-  Dist::Zilla::Plugin::BumpVersionFromGit: 0
   Dist::Zilla::Plugin::ChangelogFromGit: 0
   Dist::Zilla::Plugin::CompileTests: 0
   Dist::Zilla::Plugin::HasVersionTests: 0
   Dist::Zilla::Plugin::MinimumVersionTests: 0
   Dist::Zilla::Plugin::PortabilityTests: 0
+  Dist::Zilla::Plugin::ReadmeMarkdownFromPod: 0
   Dist::Zilla::Plugin::ReportVersions::Tiny: 0
   Dist::Zilla::Plugin::SynopsisTests: 0
   Dist::Zilla::Plugin::UnusedVarsTests: 0
-  Dist::Zilla::PluginBundle::Git: 0
+  Dist::Zilla::PluginBundle::Git: 1.102810
   Dist::Zilla::Role::PluginBundle::Easy: 0
   Moose: 0
   namespace::autoclean: 0
-  perl: v5.8.1
+  perl: 5.008001
   utf8: 0
-version: 1.03
+version: 1.04
 x_Dist_Zilla:
   plugins:
     -
-      class: Dist::Zilla::Plugin::BumpVersionFromGit
-      name: '@DANIELP/BumpVersionFromGit'
-      version: 0.006
+      class: Dist::Zilla::Plugin::Git::NextVersion
+      name: '@DANIELP/Git::NextVersion'
+      version: 1.102810
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@DANIELP/GatherDir'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@DANIELP/ExecDir'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@DANIELP/ShareDir'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@DANIELP/PruneCruft'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@DANIELP/ManifestSkip'
-      version: 3.101461
+      version: 4.102342
     -
-      class: Dist::Zilla::Plugin::AutoPrereq
-      name: '@DANIELP/AutoPrereq'
-      version: 3.101461
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: '@DANIELP/AutoPrereqs'
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@DANIELP/PkgVersion'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::PodVersion
       name: '@DANIELP/PodVersion'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@DANIELP/ReportVersions::Tiny'
@@ -78,7 +78,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CompileTests
       name: '@DANIELP/CompileTests'
-      version: 1.100740
+      version: 1.103030
     -
       class: Dist::Zilla::Plugin::HasVersionTests
       name: '@DANIELP/HasVersionTests'
@@ -86,7 +86,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@DANIELP/MetaTests'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::MinimumVersionTests
       name: '@DANIELP/MinimumVersionTests'
@@ -102,7 +102,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@DANIELP/PodSyntaxTests'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::UnusedVarsTests
       name: '@DANIELP/UnusedVarsTests'
@@ -110,31 +110,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@DANIELP/ExtraTests'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@DANIELP/MetaConfig'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@DANIELP/MetaYAML'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@DANIELP/MetaJSON'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::License
       name: '@DANIELP/License'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@DANIELP/Readme'
-      version: 3.101461
+      version: 4.102342
+    -
+      class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
+      name: '@DANIELP/ReadmeMarkdownFromPod'
+      version: 0.100700
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@DANIELP/MakeMaker'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::ChangelogFromGit
       name: '@DANIELP/ChangelogFromGit'
@@ -142,57 +146,57 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@DANIELP/Manifest'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@DANIELP/Git::Check'
-      version: 1.100760
+      version: 1.102810
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@DANIELP/TestRelease'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@DANIELP/ConfirmRelease'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@DANIELP/Git::Commit'
-      version: 1.100760
+      version: 1.102810
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@DANIELP/Git::Tag'
-      version: 1.100760
+      version: 1.102810
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@DANIELP/UploadToCPAN'
-      version: 3.101461
+      version: 4.102342
     -
-      class: Dist::Zilla::Plugin::Prereq
+      class: Dist::Zilla::Plugin::Prereqs
       config:
-        Dist::Zilla::Plugin::Prereq:
+        Dist::Zilla::Plugin::Prereqs:
           phase: runtime
           type: requires
-      name: Prereq
-      version: 3.101461
+      name: Prereqs
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 3.101461
+      version: 4.102342
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 3.101461
+      version: 4.102342
   zilla:
-    class: Dist::Zilla
+    class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 3.101461
+    version: 4.102342
